k8s/chat-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
spec:
  selector:
    matchLabels:
      app: chat
  replicas: 1
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
      - name: chat
        image: kpatel20538/livestream-chat:chat
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: chat
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: chat
