k8s/livestream-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: livestream
spec:
  selector:
    matchLabels:
      app: livestream
  replicas: 1
  template:
    metadata:
      labels:
        app: livestream
    spec:
      containers:
      - name: livestream
        image: alqutami/rtmp-hls:latest-alpine
        ports:
        - containerPort: 8080
        - containerPort: 1935
---
apiVersion: v1
kind: Service
metadata:
  name: livestream
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: rtmp
    port: 1935
  selector:
    app: livestream
