k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    dev.okteto.com/generate-host: "true"
spec:
  rules:
  - http:
      paths:
      - path: /chat
        backend:
          serviceName: chat
          servicePort: 80
      - path: /players
        backend:
          serviceName: livestream
          servicePort: 80
      - path: /hls
        backend:
          serviceName: livestream
          servicePort: 80
      - path: /dash
        backend:
          serviceName: livestream
          servicePort: 80
